--- a/myfirstsite/stylesedovic.css
+++ b/myfirstsite/stylesedovic.css
@@ -1,16 +1,23 @@
 body{
   font-family: Arial, Helvetica, Lucida, sans-serif;
   font-size: 25px;
-  text-align: center;
   color: grey;
+  text-align: center;
+  background-color: #e6ffff;
 }
 
 h1{
-  font-size: 100px;
+  font-size: 150px;
   font-weight: bold;
-  text-align: center;
-  padding-top: 15px;
+  padding-top: 5px;
   color: #660066;
+}
+
+.photo{
+  width:500px;
+  border-style: none;
+  padding-bottom: 100px;
+  margin: auto;
 }
 
 li{
@@ -18,28 +25,45 @@ li{
 }
 
 .p1{
-  font-size: 50px;
+  font-size: 75px;
   font-weight: bold;
   color: #800080
-}
-.photo{
-  width:500px;
-  border-style: none;
-float:left;
-  margin:0 20px 0 0;
-}
-
-#container{
-width:750px
-margin: 0 auto;
 }
 
 #mainbar{
 width: 500px;
 float: left;
+font-size:50px;
+padding-right: 50px;
 }
 
 #sidebar{
   width: 200px;
   float: right;
+  text-align: right;
+}
+
+ a:link {
+  display: block;
+  text-decoration: none;
+  color:#aa00ff;
+}
+
+ a:visited{
+  text-decoration:none;
+  color:#440066;
+}
+
+a:hover{
+  color: #4d4dff;
+}
+
+#footbar{
+clear: both;
+display: block;
+}
+
+#container{
+width:750px;
+margin:0 auto;
 }
